Fix issue with text overflowing search result boxes

--- a/public/styles.css
+++ b/public/styles.css
@@ -117,7 +117,6 @@ h1, h2, h3 h4, h5, h6 {
 
 .searchResult {
   position: relative;
-  vertical-align: top;
   width: 80%;
   min-width: 280px;
   max-width: 700px;
@@ -131,12 +130,15 @@ h1, h2, h3 h4, h5, h6 {
   padding: 1em;
   border: 2px solid #97345C;
   border-radius: 5px;
+  /*overflow: hidden;*/
 }
 
 .searchResult h1 {
+  /*width: 90%;*/
   font-size: 1.1em;
   font-weight: 500;
   margin-bottom: 20px;
+  /*white-space: pre-wrap;*/
 }
 
 .searchResult-info {
@@ -144,13 +146,15 @@ h1, h2, h3 h4, h5, h6 {
   text-align: left;
   /*width: 60%;*/
   white-space: nowrap;
-  overflow: hidden;
+  /*overflow: hidden;*/
+  width: 50%;
 }
 
 .searchResult-info-text {
   display: inline-block;
   vertical-align: top;
   text-align: left;
+  white-space: normal;  
 }
 
 .resultImage {
@@ -221,6 +225,10 @@ h1, h2, h3 h4, h5, h6 {
 }
 
 @media (max-width: 550px) {
+  .searchResult-info {
+    font-size: .9em;
+  }
+
   .going-section {
     position: static;
     display: block;
